[package]
name = "rpak"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
derivative = "2.2.0" # fucking rust

[build-dependencies]
cc = "1"
bindgen = "0.58"